--- a/charts/stable/immich/Chart.yaml
+++ b/charts/stable/immich/Chart.yaml
@@ -33,7 +33,7 @@ maintainers:
   - name: TrueCharts
     email: info@truecharts.org
     url: https://truecharts.org
-name: immich
+name: immichlin
 sources:
   - https://github.com/immich-app/immich
   - https://github.com/truecharts/charts/tree/master/charts/stable/immich
